tomcat_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-tomcat
  labels:
    app: sample-tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-tomcat
  template:
    metadata:
      labels:
        app: sample-tomcat
    spec:
      containers:
      - name: sample-tomcat
        image: httpd-tomcat-test/tomcat:1.0
        ports:
        - containerPort: 8009
        volumeMounts:
        - name: server-xml
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml
      volumes:
      - name: server-xml
        configMap:
          name: tomcat-conf
          items:
          - key: server.xml
            path: server.xml
