httpd_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-httpd-service
spec:
  type: NodePort
  selector:
    app: sample-httpd
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30080
