tomcat_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-tomcat-service
spec:
  type: ClusterIP
  selector:
    app: sample-tomcat
  ports:
  - protocol: TCP
    port: 8009
